Split out upload grants router
